// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project - Add Data - Job Result should not show Load More link when there are no more data cuts results 1`] = `
<pf-job-result
  cutSelected={[Function EventEmitter]}
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  loadDataCuts={[Function EventEmitter]}
  loadingResults$={[Function Store]}
  loadingResultsSub={[Function Subscriber]}
  matchesMouseEnter={[Function EventEmitter]}
  matchesMouseLeave={[Function EventEmitter]}
  matchesMouseLeaveTimeout={[Function Number]}
  selectedCuts$={[Function Store]}
  showCutsLabel={[Function String]}
  showDataCuts={[Function Boolean]}
  showJobDetail="false"
  store={[Function Store]}
  toggleDataCutsLabel={[Function String]}
>
  <div
    class="result job-result-row"
    ng-reflect-klass="result job-result-row"
    ng-reflect-ng-class="[object Object]"
  >
    <div
      class="d-flex justify-content-between"
    >
      <div
        class="d-flex"
      >
        <div
          class="job-title"
        >
           Blend of Gas Operations Top Executive-Corporate, G 
        </div>
        <div
          class="job-code"
        >
           (13001) 
        </div>
      </div>
      
      <div
        class="matches"
      >
         5 
      </div>
    </div>
    <div
      class="vendor"
    >
       Hewitt Associates 
      
      
      - TCM Executive Long Term Incentives Total Compensation by Industry (4/1/10)
    </div>
    <div
      class="d-flex mt-2"
    >
      <div
        class="link au-lnk-show-hide-data-cuts"
      >
         Hide Cuts 
      </div>
      <div
        class="link mx-2"
      >
         | 
      </div>
      <div
        class="link au-lnk-show-hide-job-details"
      >
         Show Job Detail 
      </div>
    </div>
    
    
    <div>
      
      
      <pf-data-cuts />
      
      
    </div>
    
  </div>
</pf-job-result>
`;

exports[`Project - Add Data - Job Result should show Load More link when there are more data cuts from server 1`] = `
<pf-job-result
  cutSelected={[Function EventEmitter]}
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  loadDataCuts={[Function EventEmitter]}
  loadingResults$={[Function Store]}
  loadingResultsSub={[Function Subscriber]}
  matchesMouseEnter={[Function EventEmitter]}
  matchesMouseLeave={[Function EventEmitter]}
  matchesMouseLeaveTimeout={[Function Number]}
  selectedCuts$={[Function Store]}
  showCutsLabel={[Function String]}
  showDataCuts={[Function Boolean]}
  showJobDetail="false"
  store={[Function Store]}
  toggleDataCutsLabel={[Function String]}
>
  <div
    class="result job-result-row"
    ng-reflect-klass="result job-result-row"
    ng-reflect-ng-class="[object Object]"
  >
    <div
      class="d-flex justify-content-between"
    >
      <div
        class="d-flex"
      >
        <div
          class="job-title"
        >
           Blend of Gas Operations Top Executive-Corporate, G 
        </div>
        <div
          class="job-code"
        >
           (13001) 
        </div>
      </div>
      
      <div
        class="matches"
      >
         5 
      </div>
    </div>
    <div
      class="vendor"
    >
       Hewitt Associates 
      
      
      - TCM Executive Long Term Incentives Total Compensation by Industry (4/1/10)
    </div>
    <div
      class="d-flex mt-2"
    >
      <div
        class="link au-lnk-show-hide-data-cuts"
      >
         Hide Cuts 
      </div>
      <div
        class="link mx-2"
      >
         | 
      </div>
      <div
        class="link au-lnk-show-hide-job-details"
      >
         Show Job Detail 
      </div>
    </div>
    
    
    <div>
      
      
      <pf-data-cuts />
      
      <span
        class="link"
      >
        Load More
      </span>
      
    </div>
    
  </div>
</pf-job-result>
`;

exports[`Project - Add Data - Job Result should show error state if issue loading data cuts 1`] = `
<pf-job-result
  cutSelected={[Function EventEmitter]}
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  loadDataCuts={[Function EventEmitter]}
  loadingResults$={[Function Store]}
  loadingResultsSub={[Function Subscriber]}
  matchesMouseEnter={[Function EventEmitter]}
  matchesMouseLeave={[Function EventEmitter]}
  matchesMouseLeaveTimeout={[Function Number]}
  selectedCuts$={[Function Store]}
  showCutsLabel={[Function String]}
  showDataCuts={[Function Boolean]}
  showJobDetail="false"
  store={[Function Store]}
  toggleDataCutsLabel={[Function String]}
>
  <div
    class="result job-result-row"
    ng-reflect-klass="result job-result-row"
    ng-reflect-ng-class="[object Object]"
  >
    <div
      class="d-flex justify-content-between"
    >
      <div
        class="d-flex"
      >
        <div
          class="job-title"
        >
           Blend of Gas Operations Top Executive-Corporate, G 
        </div>
        <div
          class="job-code"
        >
           (13001) 
        </div>
      </div>
      
      <div
        class="matches"
      >
         5 
      </div>
    </div>
    <div
      class="vendor"
    >
       Hewitt Associates 
      
      
      - TCM Executive Long Term Incentives Total Compensation by Industry (4/1/10)
    </div>
    <div
      class="d-flex mt-2"
    >
      <div
        class="link au-lnk-show-hide-data-cuts"
      >
         Hide Cuts 
      </div>
      <div
        class="link mx-2"
      >
         | 
      </div>
      <div
        class="link au-lnk-show-hide-job-details"
      >
         Show Job Detail 
      </div>
    </div>
    
    
    <div>
      
      <div
        class="loading-datacuts-error"
      >
        <i
          class="fas fa-exclamation-triangle icon"
        />
         Error loading data cuts. Please try again later. 
      </div>
    </div>
    
  </div>
</pf-job-result>
`;
